general housekeeping, added and debugged hand-coded lexical analyzer, hooked that into bison and test aparatus

--- a/range/lexer/Makefile
+++ b/range/lexer/Makefile
@@ -1,10 +1,10 @@
-test: lex.yy.c rngcomp.tab.c rngcomp.tab.h lex.h
-	gcc  -lfl lex.yy.c rngcomp.tab.c  -o test
+test: lex.my.c rngcomp.tab.c rngcomp.tab.h
+	gcc lex.my.c rngcomp.tab.c  -o test
 
-lex.h: lex.yy.c
 
-lex.yy.c: rngcomp.l
-	flex rngcomp.l
+#lex.h: lex.yy.c
+#lex.yy.c: rngcomp.l
+#	flex rngcomp.l
 
 rngcomp.tab.h: rngcomp.y
 	bison -d rngcomp.y
