discovered and garbage collected a few more instances of old references to the conflicting versions of buffer.h.

--- a/charclass/lexer/Makefile
+++ b/charclass/lexer/Makefile
@@ -1,6 +1,9 @@
 test: lex.c cc_comp.tab.c cc_comp.tab.h
 	gcc lex.c cc_comp.tab.c  -o test
 
+testdb: lex.c cc_comp.tab.c cc_comp.tab.h
+	gcc -g lex.c cc_comp.tab.c  -o testdb
+
 cc_comp.tab.c: cc_comp.tab.h
 cc_comp.tab.h: cc_comp.y ../charclass.h
 	bison -d cc_comp.y
