--- a/charclass/Makefile
+++ b/charclass/Makefile
@@ -1,4 +1,6 @@
-test: test.c charclass.h
-	gcc test.c -o test
-testdb: test.c charclass.h
-	gcc -g test.c -o testdb
+buffer.h
+buffer.tab.h
+cbits.h
+cc_comp.y
+cc_lex.c
+charclass.h
