consolidated working directories for various moduldules

--- a/charclass/Makefile
+++ b/charclass/Makefile
@@ -1,6 +1,12 @@
-buffer.h
-buffer.tab.h
-cbits.h
-cc_comp.y
-cc_lex.c
-charclass.h
+testdb: test
+	gcc -g cc_lex.c main.c -o testdb
+test: main.c cc_parse.tab.h cc_parse.h buffer.h buffer.tab.h cc_lex.c charclass.h cbits.h
+	gcc cc_lex.c main.c -o test
+
+cc_parse.h: cc_parse.tab.h
+cc_parse.tab.h: cc_parse.y
+	bison cc_parse.y
+
+clean: cc_parse.tab.h cc_parse.h 
+	rm cc_parse.tab.h cc_parse.h 
+
