found and fixed bug where hash function modified underlying string to produce different outputs later and mangle identifiers. added example directory

--- a/fsm/parse/Makefile
+++ b/fsm/parse/Makefile
@@ -1,5 +1,6 @@
 parser: lex.yy.c table.h parser.tab.c ast.h
 	gcc lex.yy.c parser.tab.c -lfl -o parser
+	cp parser examples/parser
 lex.yy.c: lexer.l parser.tab.h
 	flex lexer.l
 parser.tab.h: parser.tab.c
@@ -10,4 +11,5 @@ cc_parse.tab.h: cc_parse.y
 	bison cc_parse.y
 dot: ast.dot
 	dot -Tsvg ast.dot > ast.svg
-
+clean: lex.yy.c parser.tab.c parser.tab.h
+	rm lex.yy.c parser.tab.c parser.tab.h
