added more code generation routines, and example source files in the mata lang. Examples directory with makefile for making c output, compiling a test wrapper c program for the c output, and outputting dot files and svg files for the parse tree.
Added header file that manages a list of transitions and their names, for use in code generation.

--- a/fsm/Makefile
+++ b/fsm/Makefile
@@ -1,5 +1,5 @@
-parser: lex.yy.c table.h parser.tab.c ast.h
-	gcc lex.yy.c parser.tab.c -lfl -o parser
+parser: lex.yy.c table.h parser.tab.c ast.h cc_parse.h cc_lex.c
+	gcc lex.yy.c parser.tab.c cc_parse.c -lfl -o parser
 	cp parser examples/parser
 lex.yy.c: lexer.l parser.tab.h
 	flex lexer.l
@@ -13,5 +13,7 @@ dot: ast.dot
 	dot -Tsvg ast.dot > ast.svg
 cc_test: cc_test.c charclass.h cc_lex.c cc_parse.h cc_parse.tab.h
 	gcc cc_test.c cc_lex.c -o cc_test
-clean: lex.yy.c parser.tab.c parser.tab.h cc_parse.tab.h cc_parse.h
-	rm lex.yy.c parser.tab.c parser.tab.h cc_parse.tab.h cc_parse.h
+tr_test: tr_test.c charclass.h cc_parse.h cc_lex.c trans_list.h
+	gcc tr_test.c cc_lex.c -o tr_test
+clean: lex.yy.c parser.tab.c parser.tab.h cc_parse.tab.h cc_parse.c
+	rm lex.yy.c parser.tab.c parser.tab.h cc_parse.tab.h cc_parse.c
