added vim syntax highlighting and ftdetect files

--- a/fsm/examples/Makefile
+++ b/fsm/examples/Makefile
@@ -1,8 +1,9 @@
 %.out : %.h
 	cp $< FSM.h
 	gcc test.c -o $@
-	rm FSM.h
 %.svg : %.dot
 	dot -Tsvg $< > $@
 %.dot %.h : %.mata
-	cat $< | ./parser $< 
+	./parser $< 
+clear: 
+	rm *.out *.svg *.dot  FSM.h
